Archive2/d8/1e86b83e7e4efd/output
main.cpp:3:18: error: templates cannot be declared inside of a local class
    struct foo { template<typename T> void bar() {} };
                 ^~~~~~~~~~~~~~~~~~~~
1 error generated.
