Archive2/d8/1e86b83e7e4efd/main.cpp
int main()
{
    struct foo { template<typename T> void bar() {} };
}
